--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@ a:hover, button:hover{
     top: 0;
     left: 0;
     width: 100%;
-    background-color:var(--navbar-color);
+    background-color:var(--secondary-color);
     display: flex;
     justify-content: space-around; 
     align-items: center;
     padding: 10px 0; 
     z-index: 1000;
+    border-bottom: var(--secondary-color) solid 5px;
 }
 
 .navbar img {
@@ -142,3 +143,4 @@ h1 {
 .actu img {
     max-width: 100px;
 }
+
