--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header, footer{
 position: fixed;
 }
 .container{
-margin-top: 70px;
+margin-top: 90px;
 }
 
 :root {
@@ -123,14 +123,108 @@ h1 {
     text-align: center;
 }
 
-/*ACTUALITES*/
-
-.gridActus {
+/*ACCUEIL*/
+.grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
+
+.fonctionnement {
+    background-color: var(--white);
+    border: 4px solid var(--secondary-color);
+    flex-basis: 25%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    border-radius : 10px;
+    height: 250px;
+}
+
+.fonctionnement img {
+    max-width: 100px;
+}
+
+.pourquoiMonnaie {
+    background-color:#ad529d ;
+    color:white;
+}
+
+.pourquoiMonnaie h3 {
+    text-align : center;padding-top:20px;
+}
+
+.pourquoiMonnaie section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.pourquoiMonnaie p {
+    flex-basis: 13%;
+    flex-grow: 1;
+    flex-wrap : wrap;
+    flex-shrink: 1;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    height: 50px;
+}
+
+.pourquoiMonnaie img{
+    flex-basis: 13%;
+    text-align: center;
+    max-width: 300px;
+    margin-top:-10px;
+    margin-bottom: 10px;
+}
+
+.valeur{
+    flex-basis: 25%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 20px;
+    margin: 10px;
+    text-align: justify;
+    height: 250px;
+}
+
+.valeur {
+    margin-top : 70px;
+}
+
+.valeur img {
+    display: block; 
+    margin: 0 auto;
+    min-width:400px;
+    margin-top:-100px;
+}
+
+.titreCentre{
+    text-align: center;
+}
+
+.infoAsso{
+    flex-basis: 40%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 20px;
+    margin: 10px;
+    text-align: justify;
+    height: 250px;
+}
+
+.infoAsso img{
+    width: 80%;
+}
+
+/*ACTUALITES*/
+
+
 
 .actu {
     background-color: var(--white);
@@ -143,7 +237,6 @@ h1 {
     text-align: center;
     border-radius : 10px;
     height: 250px;
-
 }
 
 .actu img {
@@ -152,10 +245,24 @@ h1 {
 
 /*FOOTER*/
 footer {
+    display : flex;
     width: 100%; /* Prend toute la largeur de la page */
     height: 50px; /* Hauteur */
     background-color: var(--principal-color); /* Couleur de fond */
+    color:var(--white);
     bottom: 0;
     left:0;
     position: fixed;
+    text-align: center;
+}
+
+footer a {
+    color: var(--white);
+    text-decoration: underline;
+}
+
+footer a,
+footer p {
+    margin: 10px;
+    flex-basis: 32%;
 }
